fix PHP Bug #49938: Phar::isBuffering() returns inverted value

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@290647 c90b9560-bf6c-de11-be94-00142212c4b1