ext/phar/tests/phar_begin_setstub_commit.phpt
@@ -36,8 +36,8 @@ var_dump($p->getStub());
 unlink(dirname(__FILE__) . '/brandnewphar.phar');
 ?>
 --EXPECT--
-bool(true)
 bool(false)
+bool(true)
 string(5) "Hello"
 string(84) "<?php var_dump("First"); Phar::mapPhar("brandnewphar.phar"); __HALT_COMPILER(); ?>
 "
@@ -45,7 +45,7 @@ string(5) "World"
 string(85) "<?php var_dump("Second"); Phar::mapPhar("brandnewphar.phar"); __HALT_COMPILER(); ?>
 "
 ===COMMIT===
-bool(true)
+bool(false)
 string(5) "Hello"
 string(5) "World"
 string(85) "<?php var_dump("Second"); Phar::mapPhar("brandnewphar.phar"); __HALT_COMPILER(); ?>
