ext/phar/tests/tar/phar_begin_setstub_commit.phpt
@@ -37,8 +37,8 @@ unlink(dirname(__FILE__) . '/brandnewphar.phar.tar');
 ?>
 --EXPECT--
 bool(true)
-bool(true)
 bool(false)
+bool(true)
 string(5) "Hello"
 string(84) "<?php var_dump("First"); Phar::mapPhar("brandnewphar.phar"); __HALT_COMPILER(); ?>
 "
@@ -46,7 +46,7 @@ string(5) "World"
 string(85) "<?php var_dump("Second"); Phar::mapPhar("brandnewphar.phar"); __HALT_COMPILER(); ?>
 "
 ===COMMIT===
-bool(true)
+bool(false)
 string(5) "Hello"
 string(5) "World"
 string(85) "<?php var_dump("Second"); Phar::mapPhar("brandnewphar.phar"); __HALT_COMPILER(); ?>
